--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="icon" href="https://scfcdv.github.io/homeweb2/favicon.ico">
 <title>超階乗</title>
 </head>
 <body>
